feat(ui): add price display mode switching with CNY and USD support
Add price mode toggle buttons allowing users to switch between ratio, CNY, and USD display formats. Implement price conversion logic using scale factors from backend utils, dynamically update table headers based on selected mode, and provide intuitive UI controls with active state styling.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
 
                     <button id="clearBtn">清除筛选</button>
                 </div>
+
+                <!-- 价格显示模式切换按钮 -->
+                <div class="price-mode-section">
+                    <label class="price-mode-label">价格显示模式:</label>
+                    <div class="price-mode-buttons">
+                        <button id="ratioModeBtn" class="price-mode-btn active" data-mode="ratio">倍率</button>
+                        <button id="cnyModeBtn" class="price-mode-btn" data-mode="cny">人民币 CNY</button>
+                        <button id="usdModeBtn" class="price-mode-btn" data-mode="usd">美元 USD</button>
+                    </div>
+                </div>
             </div>
 
             <div class="stats">
