--- a/index.html
+++ b/index.html
@@ -31,9 +31,19 @@
                 </div>
 
                 <div class="filters">
-                    <select id="channelFilter">
-                        <option value="">所有渠道类型</option>
-                    </select>
+                    <div class="custom-select-wrapper">
+                        <div id="channelFilter" class="custom-select">
+                            <div class="select-trigger">
+                                <span class="select-text">所有渠道类型</span>
+                                <span class="select-arrow">▼</span>
+                            </div>
+                            <div class="select-options">
+                                <div class="select-option" data-value="">
+                                    <span class="option-text">所有渠道类型</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                     <select id="typeFilter">
                         <option value="">所有类型</option>
