✨ feat(price-mode): add price calculation precision notice
- display new notice about floating point precision issues
- help users understand potential pricing display discrepancies

💄 style(price-mode): style price mode notice section

- add styles for notice box, icon, and text
- improve readability and visual separation for notice

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                         <button id="cnyModeBtn" class="price-mode-btn" data-mode="cny">人民币 CNY</button>
                         <button id="usdModeBtn" class="price-mode-btn" data-mode="usd">美元 USD</button>
                     </div>
+                    <div class="price-mode-notice">
+                        <span class="notice-icon">💡</span>
+                        <span class="notice-text">注意：价格计算以倍率为准，人民币及美元计价为从倍率反算得出，可能存在浮点数精度问题（如实际8元显示为7.998）</span>
+                    </div>
                 </div>
             </div>
 
