feat(search): implement fuzzy search with highlighting and relevance sorting
Add comprehensive fuzzy search functionality that supports multiple matching strategies including direct substring matching, word-based matching, and character sequence matching. Results are now sorted by relevance score and matching text is highlighted in the UI.

- Add fuzzy matching algorithm with multiple strategies for better search results
- Implement relevance-based sorting to show most relevant matches first
- Add search result highlighting with animated visual feedback
- Update search placeholder to indicate fuzzy matching support

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="prices-tab" class="tab-content active">
             <div class="search-section">
                 <div class="search-box">
-                    <input type="text" id="searchInput" placeholder="搜索模型名称..." />
+                    <input type="text" id="searchInput" placeholder="搜索模型名称... (支持模糊匹配，如：kimi k2或者kimi-k2)" />
                     <button id="searchBtn">搜索</button>
                 </div>
 
